Archive2/28/d0fb59f307951f/output
main.cpp:7:9: error: return type of out-of-line definition of 'a::foo' differs from that in the declaration
auto a::foo()
        ^
main.cpp:4:9: note: previous declaration is here
    int foo();
        ^
main.cpp:9:12: error: cannot initialize return object of type 'auto' with an rvalue of type 'int'
    return 1;
           ^
2 errors generated.
